--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,9 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=8.3.5"
+    "pytest>=8.4.2",
+    "detect-secrets>=1.5.0",
+    "pytest-cov>=7.0.0"
 ]
 
 [project.scripts]
